# Erable

./: .bettercodehub.yml  .fossa.yml  .gitignore  .project  .rebel.xml.bak  .test.erable.swp  CODE_OF_CONDUCT.md  Compiler.py  Exceptions.py  LICENSE  LeafClasses.py  MindMap.mmd  Node.py  OpCodes.py  Optimizer.py  README.md  dependency-reduced-pom.xml  erable.sh  nb-configuration.xml  nbactions-ErableCompileStdlib.xml  nbactions-ErableCompileTests.xml  nbactions-ErableDump.xml  nbactions-ErableRunTest.xml  nbactions-OpCodeToCpp.xml  nbactions.xml  pom.xml  speedtest.erable  test.dynec  test.ec  test.erable  test_redefinition.erable
ErableLang/: .gitignore  CMakeLists.txt  Doxyfile.in  ParseTable.cpp  ParseTable.hpp  README.md
ErableLang/Compiler/: AST.cpp  AST.hpp  CMakeLists.txt  Headers.hpp  ID.cpp  ID.hpp  Lexer.cpp  Lexer.hpp  Old_Parser.cpp  Old_Parser.hpp  Old_Symbols.cpp  Old_Symbols.hpp  Old_Syntax.cpp  Old_Syntax.hpp  ParseTable.cpp  ParseTableIO.cpp  ParseTableIO.hpp  ParseTableInput.hpp  ParseTableOutput.cpp  ParseTableOutput.hpp  Parser.cpp  Parser.hpp  ProcessedData.cpp  ProcessedData.hpp  Scanner.hpp  Symbols.cpp  Symbols.hpp  Syntax.cpp  Syntax.hpp  Tokens.cpp  Tokens.hpp  lexer.cpp  lexer.hpp  main.cpp  tanpero_lexer.cpp  tanpero_lexer.hpp  tanpero_token.hpp
ErableLang/Global/: CMakeLists.txt  Exceptions.hpp  Global.cpp  Global.hpp  IO.cpp  IO.hpp  Utils.h
ErableLang/Playground/: CMakeLists.txt  main.cpp
ErableLang/VM/: CMakeLists.txt  ConstantPool.cpp  Descriptor.cpp  Global.cpp  Global.hpp  IO.cpp  Metadata.cpp  Metadata.hpp  NativeFunctions.cpp  NativeFunctions.hpp  Program.cpp  Program.hpp  Types.cpp  Types.hpp  VMGlobal.hpp
ErableLang/html/: _a_s_t_8cpp.html  _a_s_t_8hpp.html  _a_s_t_8hpp_source.html  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8c.html  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8cpp.html  _compiler_2cmake-build-debug-use-llvm_2_c_make_files_23_814_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _compiler_2cmake-build-debug-use-llvm_2_c_make_files_23_814_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _compiler_2cmake-build-debug-use-llvm_2_c_make_files_2feature__tests_8c.html  _compiler_2cmake-build-debug_2_c_make_files_23_814_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _compiler_2cmake-build-debug_2_c_make_files_23_814_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _compiler_2cmake-build-debug_2_c_make_files_2feature__tests_8c.html  _compiler_2main_8cpp.html  _compiler_2tests_2cmake-build-debug_2_c_make_files_23_814_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _compiler_2tests_2cmake-build-debug_2_c_make_files_23_814_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _compiler_2tests_2cmake-build-debug_2_c_make_files_2feature__tests_8c.html  _constant_pool_8cpp.html  _constant_pool_8hpp.html  _constant_pool_8hpp_source.html  _descriptor_8cpp.html  _descriptor_8hpp.html  _descriptor_8hpp_source.html  _erable___compiler___a_s_t___name___test_8cpp.html  _exceptions_8cpp.html  _exceptions_8hpp.html  _exceptions_8hpp_source.html  _global_8cpp.html  _global_8hpp.html  _global_8hpp_source.html  _headers_8hpp.html  _headers_8hpp_source.html  _i_d_8cpp.html  _i_d_8hpp.html  _i_d_8hpp_source.html  _i_o_8cpp.html  _i_o_8hpp.html  _i_o_8hpp_source.html  _i_o_s_8cpp.html  _i_o_s_8hpp.html  _i_o_s_8hpp_source.html  _lexer_8cpp.html  (+422 more)
ErableLang/include/: cmdline.h  dynamicro.cpp  dynamicro.h
ErableLang/latex/: _a_s_t_8cpp.tex  _a_s_t_8hpp.tex  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8c.tex  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8cpp.tex  _compiler_2cmake-build-debug-use-llvm_2_c_make_files_23_814_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _compiler_2cmake-build-debug-use-llvm_2_c_make_files_23_814_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  _compiler_2cmake-build-debug-use-llvm_2_c_make_files_2feature__tests_8c.tex  _compiler_2cmake-build-debug_2_c_make_files_23_814_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _compiler_2cmake-build-debug_2_c_make_files_23_814_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  _compiler_2cmake-build-debug_2_c_make_files_2feature__tests_8c.tex  _compiler_2main_8cpp.tex  _compiler_2tests_2cmake-build-debug_2_c_make_files_23_814_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _compiler_2tests_2cmake-build-debug_2_c_make_files_23_814_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  _compiler_2tests_2cmake-build-debug_2_c_make_files_2feature__tests_8c.tex  _constant_pool_8cpp.tex  _constant_pool_8hpp.tex  _descriptor_8cpp.tex  _descriptor_8hpp.tex  _erable___compiler___a_s_t___name___test_8cpp.tex  _exceptions_8cpp.tex  _exceptions_8hpp.tex  _global_8cpp.tex  _global_8hpp.tex  _headers_8hpp.tex  _i_d_8cpp.tex  _i_d_8hpp.tex  _i_o_8cpp.tex  _i_o_8hpp.tex  _i_o_s_8cpp.tex  _i_o_s_8hpp.tex  _lexer_8cpp.tex  _lexer_8hpp.tex  _lib_loader_8cpp.tex  _lib_loader_8hpp.tex  _math_8cpp.tex  _math_8hpp.tex  _metadata_8cpp.tex  _metadata_8hpp.tex  _native_functions_8cpp.tex  _native_functions_8hpp.tex  (+244 more)
ErableLang/stdlib/: CMakeLists.txt  IOS.cpp  IOS.hpp  Math.cpp  Math.hpp  StdLib.cpp  StdLib.hpp
ErableLang/tests/: OpCodeTTest.cpp  lex.erable
ErableVM/: .gitignore  CMakeCache.txt  CMakeLists.txt  ConstantPool.cpp  ConstantPool.hpp  Descriptor.cpp  Descriptor.hpp  Exceptions.cpp  Exceptions.hpp  Global.cpp  Global.hpp  GlobalMacros.hpp  IO.cpp  IO.hpp  InputStream.hpp  LibLoader.cpp  LibLoader.hpp  Metadata.cpp  Metadata.hpp  NativeFunctions.cpp  NativeFunctions.hpp  OpCode.hpp  Program.cpp  Program.hpp  README.md  Types.cpp  Types.hpp  Utils.h  main.cpp
ErableVM/include/: dynamicro.cpp  dynamicro.h
ErableVM/nbproject/: Makefile-Debug.mk  Makefile-Dynamic_Build.mk  Makefile-Release.mk  Makefile-Static_Build.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Dynamic_Build.bash  Package-Release.bash  Package-Static_Build.bash  configurations.xml  project.properties  project.xml
ErableVM/stdlib/: CMakeLists.txt  IOS.cpp  IOS.hpp  StdLib.cpp  (+1 more)
(+276 files in other folders)
